PWA: Display category on `md`

--- a/app/views/transactions/_transaction.html.erb
+++ b/app/views/transactions/_transaction.html.erb
@@ -89,7 +89,7 @@
         </div>
       </div>
 
-      <div class="hidden lg:flex items-center gap-1 col-span-2">
+      <div class="hidden md:flex items-center gap-1 col-span-2">
         <%= render "transactions/transaction_category", transaction: transaction %>
       </div>
 
