ERB: Align transaction amount column

--- a/app/views/transactions/index.html.erb
+++ b/app/views/transactions/index.html.erb
@@ -68,7 +68,7 @@
             </div>
 
             <p class="col-span-2 md:block hidden">category</p>
-            <p class="col-span-2 justify-self-end md:block hidden">amount</p>
+            <p class="col-span-2 col-start-11 md:col-start-auto justify-self-end md:block">amount</p>
           </div>
         <% end %>
 
